Adding or removing project member functionality implemented